# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: tests-with-coverage.yml
task_manager/: mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_labels.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_statuses.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/tasks/tests/: test_tasks.py
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: delete.html
task_manager/templates/users/: delete.html  index.html
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/tests/: test_users.py
templates/: base.html  index.html  login.html
templates/labels/: delete.html  form.html
templates/statuses/: delete.html  form.html  index.html
templates/tasks/: delete.html  detail.html  form.html  index.html
templates/users/: delete.html  form.html  index.html
