[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WhiteA", email = "mail@mail.ru" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-bootstrap5>=24.2",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[project.scripts]
python-project-52 = "python_project_52:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
